[package]
name = "li"
version = "0.1.0"
edition = "2021"
authors = ["rythoris <rythoris@proton.me>"]

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive", "env"] }
clap_complete = "4.5.1"
open = "5.1.2"
reqwest = { version = "0.11.26" }
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sigpipe = "0.1.3"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
